# kpi-computer-vision

./: .gitignore  LICENSE.md  README.md  guix.scm
lab1/: .gitignore  pyproject.toml
lab1/notebooks/: task1.py  task2.py
lab1/report/: Makefile  report.tex
lab1/src/lab1/: creation.py  transform.py
lab2/: pyproject.toml
lab2/notebooks/: task3.py
lab2/report/: Makefile  report.tex
lab2/src/lab2/: vision.py
