[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.18.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 80
