[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.18.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 80
